# 27HW

./: db.sqlite3  pyproject.toml
ads/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
ads/migrations/: 0001_initial.py  0002_ad_price.py
data/: csv_to_json.py
